--- a/oes-core/src/main/resources/templates/admin/paper/list.html
+++ b/oes-core/src/main/resources/templates/admin/paper/list.html
@@ -81,12 +81,13 @@
       </div><!-- /.row -->
     </section>
     <%include("api.html"){} %>
+    <% include("update-modal.html"){} %>
+    <% include("view-modal.html"){} %>
     <%}%>
   </div>
   <aside class="control-sidebar control-sidebar-dark">
     <!-- Control sidebar content goes here -->
   </aside>
-  <% include("update-modal.html"){} %>
   <!-- 引入footer -->
   <% include("../../include/footer.html"){}%>
   <%include("../main/api.html"){}%>
