--- a/oes-core/src/main/resources/templates/student/exam/detail.html
+++ b/oes-core/src/main/resources/templates/student/exam/detail.html
@@ -122,19 +122,19 @@
                     <dt>${qMulChoiceLP.index}. ${qMulChoice.questionName}</dt>
                     <dd></dd>
                     <dd>
-                      <input class="minimal" type="checkbox" name="${qMulChoice.id}">&nbsp;
+                      <input class="minimal" type="checkbox" value="A" name="${qMulChoice.id}">&nbsp;
                       A. <span>${qMulChoice.optionA} </span>
                     </dd>
                     <dd>
-                      <input class="minimal" type="checkbox" name="${qMulChoice.id}">&nbsp;
+                      <input class="minimal" type="checkbox" value="B" name="${qMulChoice.id}">&nbsp;
                       B. <span>${qMulChoice.optionB}</span>
                     </dd>
                     <dd>
-                      <input class="minimal" type="checkbox" name="${qMulChoice.id}">&nbsp;
+                      <input class="minimal" type="checkbox" value="C" name="${qMulChoice.id}">&nbsp;
                       C. <span>${qMulChoice.optionC}</span>
                     </dd>
                     <dd>
-                      <input class="minimal" type="checkbox" name="${qMulChoice.id}">&nbsp;
+                      <input class="minimal" type="checkbox" value="D" name="${qMulChoice.id}">&nbsp;
                       D. <span>${qMulChoice.optionD}</span>
                     </dd>
                     <%}%>
