pref: 增加教师成绩分析和成绩分析表导出

--- a/oes-core/src/main/resources/templates/include/js.html
+++ b/oes-core/src/main/resources/templates/include/js.html
@@ -28,6 +28,7 @@
 <script src="/static/js/OesUtil.js"></script>
 <script src="/static/plugins/jquery-countdown/jquery.countdown.min.js"></script>
 <script src="/static/plugins/echarts/echarts.min.js"></script>
+<script src="/static/js/wonderland.js"></script>
 <!-- iCheck -->
 <script src="/static/plugins/iCheck/icheck.min.js"></script>
 <!-- 时间选择器 js -->
