--- a/oes-core/src/main/resources/templates/student/chart/api.html
+++ b/oes-core/src/main/resources/templates/student/chart/api.html
@@ -1,9 +1,9 @@
 <script>
 
   $(function () {
-    const myChart = echarts.init(document.getElementById('main'));
+    const myChart = echarts.init(document.getElementById('main'),'wonderland');
     const option = {
-      title: {text: '学期成绩雷达图', x: 'center'},
+      title: {text: '成绩雷达图', x: 'center'},
       tooltip: {},
       legend: {
         data: ['平均成绩（Average Achievement）', '我的成绩（My Achievement）'],
@@ -73,14 +73,14 @@
           }]
         });
       } else {
-        toastr.error("json.message");
+        toastr.error(json.message);
       }
     }).fail(function () {
       toastr.error("服务器异常");
     });
 
     // 基于准备好的dom，初始化 Echarts 实例
-    const chart = echarts.init(document.getElementById('chart'));
+    const chart = echarts.init(document.getElementById('chart'),'wonderland');
     chart.setOption({
       title: {text: '成绩分数段统计', subtext: '成绩源于数据库', x: 'center'},
       tooltip: {trigger: 'item', formatter: "{a} <br/>{b} : {c} ({d}%)"},
