--- a/oes-core/src/main/resources/templates/student/chart/list.html
+++ b/oes-core/src/main/resources/templates/student/chart/list.html
@@ -28,37 +28,35 @@
       </div>
     </section>
 
+
     <!-- table 部分 -->
     <section class="content">
-
-      <!-- 模拟考试 -->
       <div class="container-fluid">
         <div class="row">
-          <div class="col-12">
+          <div class="col-6">
             <div class="card">
-              <div class="card-header bg-yellow">
-                <h3 class="card-title">图表分析</h3>
-              </div>
               <!-- /.card-header -->
               <div class="card-body table-responsive p-0">
                 <table class="table table-hover">
-                  <tbody>
-                  <div class="container-fluid">
-                    <div class="box-body">
-                      <div id="main" style="height: 500px;width: 100%"></div>
-                    </div>
-                    <hr>
-                    <div class="box-body">
-                      <div id="chart" style="height: 500px;width: 100%"></div>
-                    </div>
-                  </div>
-                  </tbody>
+                  <div id="main" style="height: 500px;width: 100%"></div>
                 </table>
               </div>
-              <!-- /.card-body -->
             </div>
             <!-- /.card -->
           </div>
+
+          <div class="col-6">
+            <div class="card">
+              <!-- /.card-header -->
+              <div class="card-body table-responsive p-0">
+                <table class="table table-hover">
+                  <div id="chart" style="height: 500px;width: 100%"></div>
+                </table>
+              </div>
+            </div>
+            <!-- /.card -->
+          </div>
+
         </div><!-- /.row -->
       </div>
     </section>
