--- a/oes-core/src/main/resources/templates/teacher/include/sider.html
+++ b/oes-core/src/main/resources/templates/teacher/include/sider.html
@@ -67,14 +67,14 @@
           </a>
         </li>
 
-        <!-- 考试管理 -->
-<!--        <li class="nav-item">-->
-        <!--          <a href="javascript:" id="exam"-->
-        <!--             class="nav-link  ${strutil.contain(name,'exam')?'active':''}">-->
-        <!--            <i class="nav-icon fas fa-clock"></i>-->
-        <!--            <p>考试管理</p>-->
-        <!--          </a>-->
-        <!--        </li>-->
+        <!-- 试卷分析 -->
+        <li class="nav-item">
+          <a href="javascript:" id="chart"
+             class="nav-link  ${strutil.contain(name,'chart')?'active':''}">
+            <i class="nav-icon fas fa-paper-plane"></i>
+            <p>试卷分析</p>
+          </a>
+        </li>
 
         <!-- 试卷复查 -->
         <li class="nav-item">
