--- a/oes-core/src/main/resources/templates/teacher/main/api.html
+++ b/oes-core/src/main/resources/templates/teacher/main/api.html
@@ -12,6 +12,10 @@
     OesUtil.ajaxPage("#course", "/teacher/course");
   });
 
+  $("#chart").click(function () {
+    OesUtil.ajaxPage("#chart", "/teacher/chart");
+  });
+
   $("#major").click(function () {
     OesUtil.ajaxPage("#major", "/teacher/major");
   });
