fix: 修复测试到的 bug

--- a/oes-core/src/main/resources/templates/admin/include/sider.html
+++ b/oes-core/src/main/resources/templates/admin/include/sider.html
@@ -68,12 +68,14 @@
         </li>
 
         <!-- 班级管理 -->
+        <% if(isNotEmpty(session.admin.academyId)){ %>
         <li class="nav-item">
           <a href="javascript:" id="grade" class="nav-link ${name == 'grade'?'active':''}">
             <i class="nav-icon fas fa-paper-plane"></i>
             <p>班级管理</p>
           </a>
         </li>
+        <% } %>
 
         <!-- 试卷管理 （系统管理员不显示）-->
         <% if(isNotEmpty(session.admin.academyId)){ %>
