--- a/oes-core/src/main/resources/templates/teacher/chart/list.html
+++ b/oes-core/src/main/resources/templates/teacher/chart/list.html
@@ -43,7 +43,7 @@
               </div>
               <!-- /.card-header -->
               <!-- form start -->
-              <form id="review-form" class="form-horizontal">
+              <form id="review-form" method="post" class="form-horizontal">
                 <div class="card-body">
                   <div class="form-group">
 
