pref: 增加试卷导出 / 多处逻辑优化

--- a/oes-core/src/main/resources/templates/admin/academy/api.html
+++ b/oes-core/src/main/resources/templates/admin/academy/api.html
@@ -10,6 +10,7 @@
       return index + 1;
     }
   }, {title: '学院', field: 'name', sortable: false},
+    {title: '学院统一代码', field: 'id', sortable: false},
     {field: 'operate', title: '操作', formatter: operateFormatter}]);
 
   function deleteAcademy(id) {
