--- a/oes-core/src/main/resources/templates/admin/course/api.html
+++ b/oes-core/src/main/resources/templates/admin/course/api.html
@@ -4,7 +4,7 @@
     return [' <button class="btn btn-success btn-sm" onclick="goUpdate(' + row.id
     + ')">指派教师 </button> ' + ' <button class="rowDel btn btn-danger btn-sm" onclick="deleteCourse('
     + row.id
-    + ')">&nbsp;删除</button>'].join('');
+    + ')">删除</button>'].join('');
   }
 
   // 模糊搜索参数
