--- a/oes-core/src/main/resources/templates/admin/student/api.html
+++ b/oes-core/src/main/resources/templates/admin/student/api.html
@@ -31,23 +31,23 @@
       }, {
         title: '姓名',
         field: 'name',
-        sortable: false
+        sortable: true
       }, {
         title: '学号',
         field: 'stuNumber',
-        sortable: false
+        sortable: true
       }, {
         title: '年级',
         field: 'level',
-        sortable: false
+        sortable: true
       }, {
         title: '所属学院',
         field: 'academy.name',
-        sortable: false
+        sortable: true
       }, {
         title: '专业',
         field: 'major.major',
-        sortable: false
+        sortable: true
       }, {
         title: '性别',
         field: 'sex',
