--- a/oes-core/src/main/resources/templates/admin/student/list.html
+++ b/oes-core/src/main/resources/templates/admin/student/list.html
@@ -29,7 +29,7 @@
           </div>
           <div class="col-sm-6">
             <ol class="breadcrumb float-sm-right">
-              <li class="breadcrumb-item"><a href="/teacher/student">学生管理</a></li>
+              <li class="breadcrumb-item"><a href="/admin/student">学生管理</a></li>
             </ol>
           </div>
         </div>
