--- a/oes-core/src/main/resources/templates/student/exam/list.html
+++ b/oes-core/src/main/resources/templates/student/exam/list.html
@@ -42,6 +42,13 @@
             <div class="card">
               <div class="card-header">
                 <h3 class="card-title">正式考试</h3>
+                <div class="card-tools">
+                  <div class="input-group input-group-sm">
+                    <button class="btn btn-default btn-sm"
+                            onclick="OesUtil.refreshTable('#paperInfo');">刷新数据
+                    </button>
+                  </div>
+                </div>
               </div>
               <!-- /.card-header -->
               <div class="card-body table-responsive">
