pref: 优化部分业务逻辑 / 增加 jar 可配置参数

--- a/oes-core/src/main/resources/templates/student/exam/api/api.html
+++ b/oes-core/src/main/resources/templates/student/exam/api/api.html
@@ -20,33 +20,33 @@
     radioClass: 'iradio_square-blue'
   });
 
-  // // 禁止复制
-  // document.oncontextmenu = function () {
-  //     return false;
-  // };
-  //
-  // // 禁止粘贴
-  // document.onpaste = function () {
-  //     return false;
-  // };
-  //
-  // document.ondragstart = function () {
-  //     return false;
-  // };
-  //
-  // document.onselectstart = function () {
-  //     return false;
-  // };
-  //
-  // document.onselect = function () {
-  //     return false;
-  // };
-  //
-  // document.oncopy = function () {
-  //     return false;
-  // };
-  //
-  // document.onmouseup = function () {
-  //     return false;
-  // };
+  // 禁止复制
+  document.oncontextmenu = function () {
+      return false;
+  };
+
+  // 禁止粘贴
+  document.onpaste = function () {
+      return false;
+  };
+
+  document.ondragstart = function () {
+      return false;
+  };
+
+  document.onselectstart = function () {
+      return false;
+  };
+
+  document.onselect = function () {
+      return false;
+  };
+
+  document.oncopy = function () {
+      return false;
+  };
+
+  document.onmouseup = function () {
+      return false;
+  };
 </script>
