--- a/oes-core/src/main/resources/templates/teacher/chart/api/chart-list-api.html
+++ b/oes-core/src/main/resources/templates/teacher/chart/api/chart-list-api.html
@@ -35,7 +35,7 @@
         series: [{
           name: '人数',
           type: 'bar',
-          data: [1, 3, 6, 10, 16],
+          data: json.data.score,
           itemStyle: {
             normal: {
               label: {
